--- a/arartekomaps/locale/es/LC_MESSAGES/django.po
+++ b/arartekomaps/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ararteko maps\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-12 17:35+0200\n"
+"POT-Creation-Date: 2015-05-18 16:47+0200\n"
 "PO-Revision-Date: 2015-05-04 16:42+0100\n"
 "Last-Translator: Urtzi Odriozola <urtzi.odriozola@gmail.com>\n"
 "Language-Team: es <LL@li.org>\n"
@@ -385,7 +385,7 @@ msgid "Nombre URL"
 msgstr ""
 
 #: places/models.py:46
-msgid "Nombre descriptibo del URL"
+msgid "Nombre descriptivo del URL"
 msgstr ""
 
 #: places/models.py:47
@@ -1033,6 +1033,16 @@ msgstr "Perfil"
 msgid "Sign out"
 msgstr "Salir"
 
+#: templates/pagination/pagination.html:5
+#: templates/pagination/pagination.html:7
+msgid "previous"
+msgstr "anterior"
+
+#: templates/pagination/pagination.html:21
+#: templates/pagination/pagination.html:23
+msgid "next"
+msgstr "siguiente"
+
 #: templates/places/edit_place.html:4 templates/places/edit_place.html:68
 msgid "Edit place"
 msgstr "Editar lugares"
@@ -1125,8 +1135,9 @@ msgid "Log in"
 msgstr ""
 
 #: templates/registration/activation_email.html:6
+#, fuzzy
 msgid "registration"
-msgstr "registro"
+msgstr "Descripción"
 
 #: templates/registration/activation_email.html:11
 #, python-format
